Test new JSContext name APIs https://bugs.webkit.org/show_bug.cgi?id=125607

Source/JavaScriptCore:

Reviewed by Darin Adler.

* API/JSContext.h:
* API/JSContextRef.h:
Fix whitespace issues.

* API/tests/testapi.c:
(globalContextNameTest):
(main):
* API/tests/testapi.mm:
Add tests for JSContext set/get name APIs.

Tools:

* Scripts/run-javascriptcore-tests:
Remove trailing whitespace.

Canonical link: https://commits.webkit.org/143675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160494 268f45cc-cd09-0410-ab3c-d52691b4dbfc